src/objects/ChatPage__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to hold chat page name to determine which chat page to use for care hub, proactive and standalone chats</description>
    <fields>
        <fullName>CareHubChat__c</fullName>
        <description>Field to hold carehub chat page name</description>
        <label>Care Hub Chat Page</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProactiveChat__c</fullName>
        <description>Field to hold proactive chat page name</description>
        <label>Proactive Chat Page</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProactivePrechat__c</fullName>
        <description>Field to hold proactive pre-chat page name</description>
        <label>Proactive Prechat Page</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StandaloneChat__c</fullName>
        <description>Field to hold standalone chat page name</description>
        <label>Standalone Chat Page</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StandalonePreChat__c</fullName>
        <description>Field to hold standalone pre-chat page name</description>
        <label>Standalone Prechat Page</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Care Hub Chat Page</label>
</CustomObject>